client/manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
        deployment: client
    spec:
      volumes:
        - name: certs
          secret:
            secretName: clientp12
            defaultMode: 420
      containers:
        - resources:
            limits:
              memory: 1Gi
          terminationMessagePath: /dev/termination-log
          name: client
          ports:
            - name: http-node
              containerPort: 3001
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: /opt/app-root/certs
          terminationMessagePolicy: File
          image: >-
            image-registry.openshift-image-registry.svc:5000/demo1/client:latest
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
